@@ -1,7 +1,15 @@
+type init_list_form =
+  | Syntactic
+      (** Syntactic form: only explicitly written values appear in
+          initialization lists. *)
+  | Semantic
+      (** Semantic form: values that are not explicitly written in
+          initialization lists appear as
+          {!value:Clang__ast.ImplicitValueInitExpr}. *)
+
 (** {!type:Options.t} stores flags that change the construction of the
     abstract syntax tree. Beware that the nodes that are ignored by default
     can differ from one version of Clang to the other. *)
-
 type t = {
     ignore_implicit_cast : bool;
     (** Ignore implicit cast nodes in expressions.
@@ -28,6 +36,12 @@ type t = {
     convert_floating_literals : bool;
     (** Convert floating literals into {!constr:Clang__ast.Float}.
         See {!constr:Clang__ast.FloatingLiteral} for examples. *)
+
+    init_list_form : init_list_form;
+    (** Select between default form (syntactic or semantic) for initialization
+        lists.
+        See {!constr:Clang__ast.ImplicitValueInitExpr} for examples.
+        Default: [Syntactic]. *)
   }
 
 let default = {
@@ -39,4 +53,5 @@ let default = {
   ignore_bind_temporary_expr = true;
   convert_integer_literals = true;
   convert_floating_literals = true;
+  init_list_form = Syntactic;
 }
