@@ -1,6 +1,6 @@
 (executable
   (name stubgen)
   (flags -open Stdcompat)
-  (preprocess (pps metaquot))
+  (preprocess (pps metaquot.ppx))
   (libraries unix stdcompat compiler-libs.common pcre clangml cmdliner
     clangml_printer metapp))
